# shenron

./: CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  README.md
.github/workflows/: ci.yml
examples/: auth.rs  context.rs  echo.rs  env.rs  exec.rs  middleware.rs  sftp.rs  shutdown.rs  signal.rs  subsystem.rs  tui.rs
src/: auth.rs  error.rs  exit.rs  handler.rs  lib.rs  middleware.rs  server.rs  session.rs
src/auth/: authorized_keys.rs  cert.rs  config.rs  keyboard_interactive.rs  mod.rs  outcome.rs  password.rs  pubkey.rs  trusted_ca.rs
src/events/: core.rs  event.rs  interceptor.rs  mod.rs
src/middleware/: chain.rs  core.rs  erased.rs  mod.rs  next.rs
src/middleware/builtins/: access_control.rs  active_term.rs  comment.rs  elapsed.rs  logging.rs  mod.rs  rate_limit.rs  recover.rs
src/middleware/builtins/sftp/: core.rs  filesystem.rs  handler.rs  local.rs  mod.rs
src/server/: core.rs  keygen.rs  mod.rs  russh.rs
src/session/: core.rs  event.rs  extensions.rs  kind.rs  mod.rs  pty.rs
src/tui/: app.rs  core.rs  event.rs  key.rs  mod.rs  writer.rs
tests/: auth.rs  keyboard_interactive.rs  multi_session.rs  session_close.rs  sftp_local.rs
tests/common/: mod.rs
