[package]
name = "shenron"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"

[dependencies]
governor = { version = "0.10.2", optional = true }
ratatui = { version = "0.29.0", optional = true, features = [
  "crossterm",
  "unstable-backend-writer",
] }
russh = { version = "0.54.6", features = ["aws-lc-rs"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
chrono = "0.4.42"
rand = "0.8"
tracing-subscriber = "0.3.22"

[features]
default = []
rate-limiting = ["dep:governor"]
ratatui = ["dep:ratatui"]

[[example]]
name = "tui"
required-features = ["ratatui"]
