[package]
name = "shenron"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
enum_glob_use = "warn"
unwrap_used = "warn"

[dependencies]
cap-std = { version = "4", optional = true }
dyn-clone = "1"
governor = { version = "0.10", optional = true }
rand = "0.10"
ratatui = { version = "0.30", optional = true, features = [
  "crossterm",
  "unstable-backend-writer",
] }
russh = { version = "0.61", features = ["aws-lc-rs"] }
russh-sftp = { version = "2.3", optional = true }
shell-words = "1"
thiserror = "2"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
chrono = "0.4"
tempfile = "3"
tracing-subscriber = "0.3.23"

[features]
default = []
rate-limiting = ["dep:governor"]
ratatui = ["dep:ratatui"]
sftp = ["dep:russh-sftp", "dep:cap-std"]

[[example]]
name = "tui"
required-features = ["ratatui"]

[[example]]
name = "sftp"
required-features = ["sftp"]
